--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ twitter_username: idrissdimson
 github_username:  idrissdimson
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
 
